# mini_RPC

./: .gitignore  CMakeLists.txt  QWEN.md  README.md  a.cpp  b.cpp  problem_readme.md
benchmarks/: async_logger_benchmark.cpp  benchmark_config.cpp  benchmark_config.h  benchmark_stats.cpp  benchmark_stats.h  rpc_benchmark.cpp  rpc_benchmark_conn_pool.cpp  rpc_benchmark_pipeline.cpp  rpc_client_pool_benchmark.cpp  rpc_thread_pool_benchmark.cpp  thread_pool_benchmark.cpp
benchmarks/results/: benchmark_analysis.md  latest_summary.md  thread_pool_optimization.md
docs/: a.txt  architecture_detailed.md  architecture_diagrams.md  architecture_diagrams.txt  architecture_improvements.md  async_logger_benchmark_analysis.md  call_co_flow_diagram.md  client_flow_diagrams.md  coroutine_double_free_bug.md  heartbeat_design.md  iteration_A_changes.diff  multi_worker_architecture.md  server_connection_hang_debug.md  server_coroutine_flow.txt  server_flow_diagrams.md  server_flowchart.md  today_changes.md
proto/: calc.proto  rpc.proto  user.proto
scripts/: run_benchmarks.sh  summarize_benchmarks.py
src/: README.md
src/client/: event_loop.cpp  event_loop.h  load_balancer.cpp  load_balancer.h  pending_calls.cpp  pending_calls.h  rpc_client.cpp  rpc_client.h  rpc_client_pool.cpp  rpc_client_pool.h  rpc_types.h
src/common/: async_logger.cpp  async_logger.h  log.cpp  log.h  mpsc_ring_queue.h  rpc_error.cpp  rpc_error.h  thread_pool.cpp  thread_pool.h  unique_fd.h
src/coroutine/: future_awaiter.h  task.h
src/demo/: client_main.cpp  coroutine_client_main.cpp  server_main.cpp
src/protocol/: codec.cpp  codec.h
src/server/: connection.cpp  connection.h  rpc_server.cpp  rpc_server.h  service_registry.cpp  service_registry.h  worker_loop.cpp  worker_loop.h
tests/: call_async_close_test.cpp  call_async_timeout_test.cpp  call_co_basic_test.cpp  call_co_close_test.cpp  call_co_edge_cases_test.cpp  call_co_out_of_order_test.cpp  call_co_timeout_test.cpp  call_mixed_waiters_test.cpp  codec_test.cpp  e2e_test.cpp  event_loop_test.cpp  heartbeat_test.cpp  out_of_order_dispatcher_test.cpp  pending_calls_test.cpp  rpc_client_pool_test.cpp  rpc_server_lifecycle_test.cpp  server_connection_coroutine_test.cpp  server_connection_test.cpp  server_multi_connection_test.cpp  server_multi_worker_loop_test.cpp  server_thread_pool_integration_test.cpp  server_worker_loop_test.cpp  service_registry_test.cpp
